tests/ui/skip_receiverless.stderr
error[E0599]: no function or associated item named `answer` found for trait `dyn Dyn`
  --> tests/ui/skip_receiverless.rs:21:24
   |
21 |     let _ = <dyn Dyn>::answer();
   |                        ^^^^^^ function or associated item not found in `dyn Dyn`
   |
note: `Src` defines an item `answer`
  --> tests/ui/skip_receiverless.rs:4:1
   |
 4 | trait Src {
   | ^^^^^^^^^
